[gd_scene load_steps=9 format=3 uid="uid://b6ofr4vb3vo1x"]

[ext_resource type="Script" uid="uid://d3uc7wfv463o" path="res://opening INtro/intro_opening.gd" id="1_jm77e"]
[ext_resource type="Texture2D" uid="uid://ckyn7vanm4k3u" path="res://opening INtro/house1.png" id="2_dvhtm"]
[ext_resource type="Texture2D" uid="uid://dcuuo6wbunaby" path="res://opening INtro/colledge1.png" id="3_4yxea"]
[ext_resource type="Texture2D" uid="uid://bqk5cbq0hxdjq" path="res://opening INtro/guard1.png" id="4_jpba4"]

[sub_resource type="Animation" id="Animation_uirf5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_0q42v"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dvhtm"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.03917),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jm77e"]
_data = {
&"RESET": SubResource("Animation_uirf5"),
&"fade_in": SubResource("Animation_0q42v"),
&"fade_out": SubResource("Animation_dvhtm")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jm77e")

[node name="Sprite2D_College" type="Sprite2D" parent="."]
position = Vector2(578, 324)
scale = Vector2(0.758464, 0.676758)
texture = ExtResource("3_4yxea")

[node name="Sprite2D_House" type="Sprite2D" parent="."]
position = Vector2(580.5, 326)
scale = Vector2(0.757161, 0.673828)
texture = ExtResource("2_dvhtm")

[node name="Sprite2D_Guard" type="Sprite2D" parent="."]
position = Vector2(580, -442)
scale = Vector2(1.12891, 1.13477)
texture = ExtResource("4_jpba4")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -198.0
offset_top = -1390.0
offset_right = 1297.0
offset_bottom = -562.0
scale = Vector2(1.05081, 4.32559)
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jm77e")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(577, 339)
